<resources>
    <string name="app_name">FinanceTracker</string>
    <string name="balance">Balance: %s</string>
    <string name="recent_actions">Recent actions</string>
    <string name="last_month_total">Last month total</string>
    <string name="income">Income</string>
    <string name="income_num">%s</string>
    <string name="spent_num">%s</string>
    <string name="spent">Expenditure</string>
    <string name="add">Add</string>
    <string name="category_food">Category: Food</string>
    <string name="amount_5000">Amount: 5000</string>
    <string name="see_all">See all</string>
    <string name="temp">temp</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="_3_letter_code">3 letter code</string>
    <string name="result">Result: </string>
    <string name="convert">Convert</string>
    <string name="empty" />
    <string name="see_data_for_last">See data for last</string>
    <string name="all_time">all time</string>
</resources>