<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/from_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/from"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="140dp"
        android:text="@string/amount"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="270dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="50dp"
        android:text="@string/to"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/from_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/from_input"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@color/gray"
        android:hint="@string/_3_letter_code"
        android:inputType="textAutoCorrect|text|textAutoComplete"
        android:textColor="#FFFFFF"
        android:textColorHint="#70FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/from_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck"></EditText>

    <EditText
        android:id="@+id/amount_input"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="138dp"
        android:autofillHints=""
        android:background="@color/gray"
        android:hint="@string/empty"
        android:inputType="textAutoCorrect|text|textAutoComplete"
        android:textColor="#FFFFFF"
        android:textColorHint="#70FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/amount_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"></EditText>

    <EditText
        android:id="@+id/to_input"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@color/gray"
        android:hint="@string/_3_letter_code"
        android:inputType="textAutoCorrect|textPersonName|text|textAutoComplete"
        android:textColor="#FFFFFF"
        android:textColorHint="#70FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/to_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"></EditText>

    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00FF00"
        android:text="@string/convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_input" />

</androidx.constraintlayout.widget.ConstraintLayout>