<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/spinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="30dp"
        android:text="@string/see_data_for_last"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray"
        android:contentDescription="@string/all_time"
        android:minHeight="40dp"
        android:popupBackground="@color/gray"
        app:layout_constraintStart_toEndOf="@+id/spinnerLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/income"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLabel" />

    <TextView
        android:id="@+id/month_income"
        android:layout_width="118dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/income_num"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/income" />

    <ImageView
        android:id="@+id/arrow_up"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/month_income"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLabel"
        app:srcCompat="@drawable/arrow_up_circle_svgrepo_com" />

    <TextView
        android:id="@+id/spent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/spent"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/arrow_up"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLabel" />

    <TextView
        android:id="@+id/month_spent"
        android:layout_width="129dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/spent_num"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/arrow_up"
        app:layout_constraintTop_toBottomOf="@+id/spent" />

    <ImageView
        android:id="@+id/arrow_down"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/month_spent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLabel"
        app:srcCompat="@drawable/arrow_down_circle_svgrepo_com" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="380dp"
        android:layout_height="650dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_spent" />
</androidx.constraintlayout.widget.ConstraintLayout>